<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:gravity="center">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="Select your current location"
            android:textSize="24sp" />
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_mercury"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@mipmap/ic_mercury"
            android:paddingVertical="20dp"
            android:tag="mercury"
            android:text="Mercury" />

        <Button
            android:id="@+id/btn_venus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@mipmap/ic_venus"
            android:paddingVertical="20dp"
            android:tag="venus"
            android:text="Venus" />

        <Button
            android:id="@+id/btn_earth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@mipmap/ic_earth"
            android:paddingVertical="20dp"
            android:tag="earth"
            android:text="Earth" />

    </TableRow>

    <!--<Button-->
    <!--android:id="@+id/btn_moon"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:background="@android:color/transparent"-->
    <!--android:drawableTop="@mipmap/ic_moon"-->
    <!--android:paddingVertical="20dp"-->
    <!--android:tag="moon"-->
    <!--android:text="Moon" />-->


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_mars"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@mipmap/ic_mars"
            android:paddingVertical="20dp"
            android:tag="mars"
            android:text="Mars" />

        <Button
            android:id="@+id/btn_jupiter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@mipmap/ic_jupiter"
            android:paddingVertical="20dp"
            android:tag="jupiter"
            android:text="jupiter" />

        <Button
            android:id="@+id/btn_saturn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@mipmap/ic_saturn"
            android:paddingVertical="20dp"
            android:tag="saturn"
            android:text="Saturn" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_uranus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@mipmap/ic_uranus"
            android:paddingVertical="20dp"
            android:tag="uranus"
            android:text="Uranus" />

        <Button
            android:id="@+id/btn_neptune"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@mipmap/ic_neptune"
            android:paddingVertical="20dp"
            android:tag="neptune"
            android:text="Neptune" />

        <Button
            android:id="@+id/btn_pluto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@mipmap/ic_pluto"
            android:paddingVertical="20dp"
            android:tag="pluto"
            android:text="Pluto" />
    </TableRow>


</TableLayout>