...
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Upcoming Flights"
        android:textSize="25sp" />

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mcv_selectionColor="#5BB0FF"
        app:mcv_showOtherDates="all" />

</LinearLayout>
